2010-07-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Focus toolbar item when pressing Go to Line keybinding only when
   it's not in the toolbar's drop down overflow menu (fixes #3027454).


2010-07-11  Lex Trotman  <elextr(at)gmail(dot)com>

 * src/build.c:
   Fix build menu translation problems.


2010-07-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * wscript:
   Fix './waf install'.


2010-07-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Fix scrolling the editor line in view after loading a session and
   switching document tabs. Note this causes repainting so needs
   improvement.
 * doc/geany.txt, doc/geany.html:
   Add note to restart Geany after installing/updating before editing
   hidden prefs.
 * src/ui_utils.h, src/main.c, src/ui_utils.c:
   Use Stash to save statusbar_template setting, instead of the
   load/save-settings signal.
   Add ui_init_prefs().


2010-07-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.c, doc/geany.txt, doc/geany.html:
   Fix writing empty hidden pref "statusbar_template" key so users can
   find it (patch by Dimitar Zhekov, thanks).
 * src/ui_utils.c, src/ui_utils.h, src/main.c:
   Add ui_finalize(), free string (patch by Dimitar Zhekov, thanks).


2010-07-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c, src/project.c, src/project.h:
   Show the Project Properties build tab when choosing 'Set Build
   Commands' for now to prevent confusion with non-project commands.


2010-07-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c, doc/geany.txt, doc/geany.html:
   Fix Grep --exclude-dir example.


2010-07-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/sidebar.c:
   Add sidebar Documents popup menu item 'Find in Files'.
 * src/keyfile.c, src/main.c, src/editor.c:
   Don't unnecessarily test G_FILE_TEST_IS_SYMLINK when testing